@@ -4,6 +4,8 @@ import com.jobnote.domain.applicationform.domain.ApplicationForm;
 import com.jobnote.domain.applicationform.repository.ApplicationFormRepository;
 import com.jobnote.domain.applicationform.dto.ApplicationFormRequest;
 import com.jobnote.domain.applicationform.dto.ApplicationFormResponse;
+import com.jobnote.domain.schedule.dto.ScheduleResponse;
+import com.jobnote.domain.schedule.service.ScheduleService;
 import com.jobnote.global.exception.JobNoteException;
 import com.jobnote.domain.user.domain.User;
 import com.jobnote.domain.user.service.UserService;
@@ -12,7 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import static com.jobnote.global.common.ResponseCode.NOT_FOUND_APPLICATION_FORM;
 
@@ -23,19 +25,27 @@ public class ApplicationFormService {
 
     private final ApplicationFormRepository applicationFormRepository;
     private final UserService userService;
+    private final ScheduleService scheduleService;
 
     /* READ */
     public ApplicationFormResponse getById(final Long userId, final Long formId) {
         ApplicationForm form = getByIdOrThrow(formId);
         form.validateOwner(userId);
 
-        return ApplicationFormMapper.fromApplicationForm(form);
+        List<ScheduleResponse> schedules = scheduleService.getAllByApplicationFormId(userId, formId);
+
+        return ApplicationFormResponse.from(form, schedules);
     }
 
     public List<ApplicationFormResponse> getAll(final Long userId) {
-        return applicationFormRepository.findAllByUserId(userId).stream()
-                .map(ApplicationFormMapper::fromApplicationForm)
-                .collect(Collectors.toList());
+        List<ApplicationForm> forms = applicationFormRepository.findAllByUserId(userId);
+        List<Long> formIds = forms.stream().map(ApplicationForm::getId).toList();
+
+        Map<Long, List<ScheduleResponse>> schedulesByFormId = scheduleService.getAllGroupedByApplicationFormIds(userId, formIds);
+
+        return forms.stream()
+                .map(form -> ApplicationFormResponse.from(form, schedulesByFormId.getOrDefault(form.getId(), List.of())))
+                .toList();
     }
 
     /* CREATE */
@@ -43,8 +53,10 @@ public class ApplicationFormService {
     public Long save(final Long userId, final ApplicationFormRequest request) {
         User user = userService.getUserById(userId);
 
-        ApplicationForm saved = applicationFormRepository.save(ApplicationFormMapper.toApplicationForm(user, request));
-        return saved.getId();
+        ApplicationForm form = applicationFormRepository.save(request.toEntity(user));
+        scheduleService.saveAll(userId, form, request.schedules());
+
+        return form.getId();
     }
 
     /* UPDATE */
@@ -54,6 +66,7 @@ public class ApplicationFormService {
         form.validateOwner(userId);
 
         form.update(request);
+        scheduleService.updateAll(userId, form, request.schedules());
     }
 
     /* DELETE */
@@ -62,12 +75,13 @@ public class ApplicationFormService {
         ApplicationForm form = getByIdOrThrow(formId);
         form.validateOwner(userId);
 
+        scheduleService.deleteAllByApplicationFormId(form.getId());
         applicationFormRepository.delete(form);
     }
 
     /* HELPER METHOD */
-    private ApplicationForm getByIdOrThrow(final Long formId) {
-        return applicationFormRepository.findById(formId).orElseThrow(() ->
-                new JobNoteException(NOT_FOUND_APPLICATION_FORM));
+    public ApplicationForm getByIdOrThrow(final Long formId) {
+        return applicationFormRepository.findById(formId)
+                .orElseThrow(() -> new JobNoteException(NOT_FOUND_APPLICATION_FORM));
     }
 }
